<resources>
    <string name="app_name">LocateIt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="img">IMG</string>
    <string name="name">Name:</string>
    <string name="trailblazer_private_bus">Trailblazer Private Bus</string>
    <string name="code">Code:</string>
    <string name="tpb0001">TPB0001</string>
    <string name="details">Details</string>
    <string name="track_now">Track Now</string>
</resources>